rgbds-0.6.1/test/asm/syntax-error-lexer-mode.err
error: syntax-error-lexer-mode.asm(7):
    syntax error, unexpected af
error: syntax-error-lexer-mode.asm(11):
    syntax error, unexpected af, expecting identifier
error: Assembly aborted (2 errors)!
